--- a/contact.html
+++ b/contact.html
@@ -67,49 +67,65 @@
                 <option value="3">Blog</option>
             </select>
         </div>
-        <div class="container my-4">
-            <div class="form-group">
-              <label for="memberStatus">Are you a member?</label>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="memberStatus" id="memberYes" value="yes">
-                <label class="form-check-label" for="memberYes">Yes</label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="memberStatus" id="memberNo" value="no">
-                <label class="form-check-label" for="memberNo">No</label>
-              </div>
-            </div>
+       <div class="container my-4">
+    <div class="form-group">
+      <label for="memberStatus">Are you a member?</label>
+      <div class="row">
+        <div class="col">
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="memberStatus" id="memberYes" value="yes">
+            <label class="form-check-label" for="memberYes">Yes</label>
           </div>
-
-          <div class="container my-4">
-            <div class="form-group">
-              <label for="memberStatus">Are you a teacher?</label>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="memberStatus" id="memberYes" value="yes">
-                <label class="form-check-label" for="memberYes">Yes</label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="memberStatus" id="memberNo" value="no">
-                <label class="form-check-label" for="memberNo">No</label>
-              </div>
-            </div>
+        </div>
+        <div class="col">
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="memberStatus" id="memberNo" value="no">
+            <label class="form-check-label" for="memberNo">No</label>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-          <div class="container my-4">
-            <div class="form-group">
-              <label for="memberStatus">Are you a coder?</label>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="memberStatus" id="memberYes" value="yes">
-                <label class="form-check-label" for="memberYes">Yes</label>
-              </div>
-              <div class="form-check">
-                <input class="form-check-input" type="radio" name="memberStatus" id="memberNo" value="no">
-                <label class="form-check-label" for="memberNo">No</label>
-              </div>
-            </div>
+  <div class="container my-4">
+    <div class="form-group">
+      <label for="teacherStatus">Are you a teacher?</label>
+      <div class="row">
+        <div class="col">
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="teacherStatus" id="teacherYes" value="yes">
+            <label class="form-check-label" for="teacherYes">Yes</label>
           </div>
-          
+        </div>
+        <div class="col">
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="teacherStatus" id="teacherNo" value="no">
+            <label class="form-check-label" for="teacherNo">No</label>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <div class="container my-4">
+    <div class="form-group">
+      <label for="coderStatus">Are you a coder?</label>
+      <div class="row">
+        <div class="col">
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="coderStatus" id="coderYes" value="yes">
+            <label class="form-check-label" for="coderYes">Yes</label>
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-check">
+            <input class="form-check-input" type="radio" name="coderStatus" id="coderNo" value="no">
+            <label class="form-check-label" for="coderNo">No</label>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
         <div class="mb-3 my-4" >
             <label for="exampleFormControlTextarea1" class="form-label">Elaborate Your Concern</label>
